--- a/notepad4/CMakeLists.txt
+++ b/notepad4/CMakeLists.txt
@@ -20,9 +20,9 @@ if(NOT NOAVX2 AND NOT CMAKE_BUILD_TYPE MATCHES Debug)
 	    endif()
         elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC" OR "${CMAKE_CXX_SIMULATE_ID}" STREQUAL "MSVC")
 	    if(AVX512)
-                add_compile_options("/Ot" "/GL" "/Oi" "/Ob2" "/fp:fast" "/Gv" "/O2" "/arch:AVX512")
+                add_compile_options("/Ot" "/GL" "/Oi" "/fp:fast" "/Gv" "/arch:AVX512")
      	    else()
-                add_compile_options("/Ot" "/GL" "/Oi" "/Ob2" "/fp:fast" "/Gv" "/O2" "/arch:AVX2")
+                add_compile_options("/Ot" "/GL" "/Oi" "/fp:fast" "/Gv" "/arch:AVX2")
 	    endif()
         else()
 	    if(AVX512)
