add AVX512 extension subset options

--- a/notepad4/CMakeLists.txt
+++ b/notepad4/CMakeLists.txt
@@ -14,7 +14,7 @@ if(NOT NOAVX2 AND NOT CMAKE_BUILD_TYPE MATCHES Debug)
     if(CMAKE_SYSTEM_PROCESSOR STREQUAL "AMD64" OR CMAKE_SYSTEM_PROCESSOR STREQUAL "amd64" OR CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64")
         if( ${CMAKE_CXX_COMPILER_ID} STREQUAL "IntelLLVM")
 	    if(AVX512)
-                add_compile_options("/QxCORE-AVX512" "-O3" "-mavx512f")
+                add_compile_options("/QxCORE-AVX512" "-O3" "-mavx512f" "-mavx512bw" "-mavx512vl")
      	    else()
                 add_compile_options("/QxCORE-AVX2" "-O3" "-mavx2")
 	    endif()
@@ -26,7 +26,7 @@ if(NOT NOAVX2 AND NOT CMAKE_BUILD_TYPE MATCHES Debug)
 	    endif()
         else()
 	    if(AVX512)
-                add_compile_options("-mavx512f" "-mpopcnt" "-mbmi" "-mbmi2" "-mlzcnt" "-mmovbe" "-Ofast")
+                add_compile_options("-mavx512f" "-mavx512bw" "-mavx512vl" "-mpopcnt" "-mbmi" "-mbmi2" "-mlzcnt" "-mmovbe" "-Ofast")
      	    else()
                 add_compile_options("-mavx2" "-mpopcnt" "-mbmi" "-mbmi2" "-mlzcnt" "-mmovbe" "-Ofast")
 	    endif()
