--- a/.github/workflows/mpvbuild.yml
+++ b/.github/workflows/mpvbuild.yml
@@ -134,6 +134,8 @@ jobs:
           ./include/ci.sh export >>$GITHUB_ENV
           ./include/ci.sh install
           ./include/ci.sh build
+          mkdir prefix/${{ matrix.target }}/lib
+          find . -name '*.a' -o -name '*.so' -type f -exec cp {} prefix/${{ matrix.target }}/lib/ \;
           cd ..
 
       - name: upload artifact
@@ -145,7 +147,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.22
+          go-version: 1.23
         id: go
 
       - name: Build transfer command
