fix create path

--- a/.github/workflows/mpvbuild.yml
+++ b/.github/workflows/mpvbuild.yml
@@ -134,8 +134,8 @@ jobs:
           ./include/ci.sh export >>$GITHUB_ENV
           ./include/ci.sh install
           ./include/ci.sh build
-          mkdir prefix/${{ matrix.target }}/lib
-          find . -name '*.a' -o -name '*.so' -type f -exec cp {} prefix/${{ matrix.target }}/lib/ \;
+          mkdir -p prefix/${{ matrix.target }}/lib
+          find . -name '*.a' -o -name '*.so' -type f -print -exec cp {} prefix/${{ matrix.target }}/lib/ \;
           cd ..
 
       - name: upload artifact
