--- a/.github/workflows/opengnb-linux-arm64.yaml
+++ b/.github/workflows/opengnb-linux-arm64.yaml
@@ -48,5 +48,5 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: opengnb-linux-arm64.zip
+          name: opengnb-linux-arm64
           path: release
