--- a/.github/workflows/opengnb-linux-mipsel.yaml
+++ b/.github/workflows/opengnb-linux-mipsel.yaml
@@ -60,6 +60,6 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: opengnb-linux-mipsel.zip
+          name: opengnb-linux-mipsel
           path: release
 
