--- a/.github/workflows/opengnb-linux-x86_64.yaml
+++ b/.github/workflows/opengnb-linux-x86_64.yaml
@@ -49,6 +49,6 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: opengnb-linux-x86_64.zip
+          name: opengnb-linux-x86_64
           path: release
 
