--- a/.github/workflows/opengnb-openwrt_mipsel.yaml
+++ b/.github/workflows/opengnb-openwrt_mipsel.yaml
@@ -87,6 +87,6 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: opengnb-openwrt-mipsel.zip
+          name: opengnb-openwrt-mipsel
           path: release
 
