--- a/.github/workflows/opengnb-windows_x86_64.yaml
+++ b/.github/workflows/opengnb-windows_x86_64.yaml
@@ -62,5 +62,5 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: opengnb-windows-x86_64.zip
+          name: opengnb-windows-x86_64
           path: release
