update checkout actions

--- a/.github/workflows/notepad4.yml
+++ b/.github/workflows/notepad4.yml
@@ -41,7 +41,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: ${{ github.head_ref }}
+          ref: master
           fetch-depth: 1
           submodules: true
       
