--- a/.github/workflows/notepad4.yml
+++ b/.github/workflows/notepad4.yml
@@ -41,7 +41,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: master
+          ref: ${{ github.head_ref }}
           fetch-depth: 1
           submodules: true
       
@@ -58,7 +58,7 @@ jobs:
       - name: cache intel install
         if: matrix.toolset == 'icx'
         id: cache-install
-        uses: actions/cache@v2
+        uses: actions/cache@v4
         with:
           path: |
               C:\Program Files (x86)\Intel\oneAPI\setvars-vcvarsall.bat
