--- a/notepad4/CMakeLists.txt
+++ b/notepad4/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.20)
 
 project(notepad4 VERSION 0.1)
     
@@ -10,13 +10,13 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 option(NOAVX2 "Target CPU does NOT support AVX2")
 option(AVX512 "Target CPU supports AVX512")
 
-if(NOT NOAVX2 AND NOT CMAKE_BUILD_TYPE MATCHES Debug)
+if((AVX512 OR NOT NOAVX2) AND NOT CMAKE_BUILD_TYPE MATCHES Debug)
     if(CMAKE_SYSTEM_PROCESSOR STREQUAL "AMD64" OR CMAKE_SYSTEM_PROCESSOR STREQUAL "amd64" OR CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64")
         if( ${CMAKE_CXX_COMPILER_ID} STREQUAL "IntelLLVM")
 	    if(AVX512)
-                add_compile_options("/QxCORE-AVX512" "-O3" "-mavx512f" "-mavx512bw" "-mavx512vl")
+                add_compile_options("-march=x86-64-v4" "/QxCORE-AVX512" "-O3" "-mavx512f" "-mavx512bw" "-mavx512vl")
      	    else()
-                add_compile_options("/QxCORE-AVX2" "-O3" "-mavx2")
+                add_compile_options("-march=x86-64-v3" "/QxCORE-AVX2" "-O3" "-mavx2")
 	    endif()
         elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC" OR "${CMAKE_CXX_SIMULATE_ID}" STREQUAL "MSVC")
 	    if(AVX512)
@@ -26,9 +26,9 @@ if(NOT NOAVX2 AND NOT CMAKE_BUILD_TYPE MATCHES Debug)
 	    endif()
         else()
 	    if(AVX512)
-                add_compile_options("-mavx512f" "-mavx512bw" "-mavx512vl" "-mpopcnt" "-mbmi" "-mbmi2" "-mlzcnt" "-mmovbe" "-Ofast")
+                add_compile_options("-march=x86-64-v4" "-mavx512f" "-mavx512bw" "-mavx512vl" "-mpopcnt" "-mbmi" "-mbmi2" "-mlzcnt" "-mmovbe" "-Ofast")
      	    else()
-                add_compile_options("-mavx2" "-mpopcnt" "-mbmi" "-mbmi2" "-mlzcnt" "-mmovbe" "-Ofast")
+                add_compile_options("-march=x86-64-v3" "-mavx2" "-mpopcnt" "-mbmi" "-mbmi2" "-mlzcnt" "-mmovbe" "-Ofast")
 	    endif()
         endif()
     endif()
