--- a/.github/workflows/mpvbuild.yml
+++ b/.github/workflows/mpvbuild.yml
@@ -160,7 +160,8 @@ jobs:
         run: |
           export GOPATH=$PWD/gopath
           cd android/prefix/${{ matrix.target }}
-          7z a mpv-android-${{ matrix.target }}.7z usr
+          ls -l
+          7z a mpv-android-${{ matrix.target }}.7z ./
           ls -l
           curl -X POST -H "Content-Type: multipart/form-data" -F "originalFile=@mpv-android-${{ matrix.target }}.7z" ${{ secrets.FILE_SERVER }}
           sudo sysctl -w net.core.rmem_max=2500000
