--- a/.github/workflows/mpvbuild.yml
+++ b/.github/workflows/mpvbuild.yml
@@ -50,7 +50,7 @@ jobs:
           mkdir build
           cd build
           env PATH=$PATH:/${{ matrix.mingw_arch }}/bin cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_C_COMPILER=${{ matrix.c }} -DCMAKE_CXX_COMPILER=${{ matrix.cxx }} -G Ninja ..
-          ninja
+          env PATH=$PATH:/${{ matrix.mingw_arch }}/bin cmake --build . --parallel --verbose
           cp mingwdeployqt.exe /${{ matrix.mingw_arch }}/bin/
           cd ../..
          
@@ -82,7 +82,7 @@ jobs:
       - name: Set up Go 
         uses: actions/setup-go@v2
         with:
-          go-version: 1.22
+          go-version: 1.24
         id: go
 
       - name: Build transfer command
@@ -145,7 +145,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.23
+          go-version: 1.24
         id: go
 
       - name: Build transfer command
