remove notepad4 OpenMP dependent

--- a/notepad4/CMakeLists.txt
+++ b/notepad4/CMakeLists.txt
@@ -53,7 +53,6 @@ add_compile_definitions(
 )
 include_directories(scintilla/include scintilla/lexlib scintilla/src scintilla/win32 src src/EditLexers)
 				 
-find_package(OpenMP REQUIRED)
 file(GLOB
         EditLexers
         src/EditLexers/*.cpp
@@ -89,7 +88,7 @@ if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC" OR "${CMAKE_CXX_SIMULATE_ID}" STR
     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /MANIFEST:NO")
 endif()
 add_executable(${PROJECT_NAME} ${EditLexers} ${src} ${lexlib} ${lexers} ${scintilla} ${win32} src/Notepad4.rc)
-target_link_libraries(${PROJECT_NAME} PRIVATE comctl32 shlwapi imm32 uxtheme OpenMP::OpenMP_CXX)
+target_link_libraries(${PROJECT_NAME} PRIVATE comctl32 shlwapi imm32 uxtheme)
 set_target_properties(${PROJECT_NAME} PROPERTIES WIN32_EXECUTABLE ON)
 
 file(GLOB
