fix compiler warnings

--- a/notepad4/CMakeLists.txt
+++ b/notepad4/CMakeLists.txt
@@ -14,9 +14,15 @@ if((AVX512 OR NOT NOAVX2) AND NOT CMAKE_BUILD_TYPE MATCHES Debug)
     if(CMAKE_SYSTEM_PROCESSOR STREQUAL "AMD64" OR CMAKE_SYSTEM_PROCESSOR STREQUAL "amd64" OR CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64")
         if( ${CMAKE_CXX_COMPILER_ID} STREQUAL "IntelLLVM")
 	    if(AVX512)
-                add_compile_options("-march=x86-64-v4" "/QxCORE-AVX512" "-O3" "-mavx512f" "-mavx512bw" "-mavx512vl")
+                add_compile_options("/QxCORE-AVX512" "-O3" "-mavx512f" "-mavx512bw" "-mavx512vl")
      	    else()
-                add_compile_options("-march=x86-64-v3" "/QxCORE-AVX2" "-O3" "-mavx2")
+                add_compile_options("/QxCORE-AVX2" "-O3" "-mavx2")
+	    endif()
+        elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+	    if(AVX512)
+                add_compile_options("/Ot" "/Oi" "/fp:fast" "/Gv" "/arch:AVX512")
+     	    else()
+                add_compile_options("/Ot" "/Oi" "/fp:fast" "/Gv" "/arch:AVX2")
 	    endif()
         elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC" OR "${CMAKE_CXX_SIMULATE_ID}" STREQUAL "MSVC")
 	    if(AVX512)
