fix mingw clang toolchain compiler options

--- a/notepad4/CMakeLists.txt
+++ b/notepad4/CMakeLists.txt
@@ -18,18 +18,25 @@ if((AVX512 OR NOT NOAVX2) AND NOT CMAKE_BUILD_TYPE MATCHES Debug)
      	    else()
                 add_compile_options("/QxCORE-AVX2" "-O3" "-mavx2")
 	    endif()
-        elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+        elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang" AND "${CURRENT_SIMULATE_ID}" STREQUAL "MSVC")
 	    if(AVX512)
                 add_compile_options("/Ot" "/Oi" "/fp:fast" "/Gv" "/arch:AVX512")
      	    else()
                 add_compile_options("/Ot" "/Oi" "/fp:fast" "/Gv" "/arch:AVX2")
 	    endif()
-        elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC" OR "${CMAKE_CXX_SIMULATE_ID}" STREQUAL "MSVC")
+        elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
 	    if(AVX512)
                 add_compile_options("/Ot" "/GL" "/Oi" "/fp:fast" "/Gv" "/arch:AVX512")
      	    else()
                 add_compile_options("/Ot" "/GL" "/Oi" "/fp:fast" "/Gv" "/arch:AVX2")
 	    endif()
+        elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang" AND NOT "${CURRENT_SIMULATE_ID}" STREQUAL "MSVC")
+       if(AVX512)
+                add_compile_options("-march=x86-64-v4" "-mavx512f" "-mavx512bw" "-mavx512vl" "-mpopcnt" "-mbmi" "-mbmi2" "-mlzcnt" "-mmovbe" "-O3" "-ffast-math")
+     	    else()
+                add_compile_options("-march=x86-64-v3" "-mavx2" "-mpopcnt" "-mbmi" "-mbmi2" "-mlzcnt" "-mmovbe" "-O3" "-ffast-math")
+	    endif()
+
         else()
 	    if(AVX512)
                 add_compile_options("-march=x86-64-v4" "-mavx512f" "-mavx512bw" "-mavx512vl" "-mpopcnt" "-mbmi" "-mbmi2" "-mlzcnt" "-mmovbe" "-Ofast")
