--- a/notepad4/CMakeLists.txt
+++ b/notepad4/CMakeLists.txt
@@ -10,39 +10,51 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 option(NOAVX2 "Target CPU does NOT support AVX2")
 option(AVX512 "Target CPU supports AVX512")
 
+set(CURRENT_COMPILER_ID "${CMAKE_CXX_COMPILER_ID}")
+message("Compiler ID is: ${CURRENT_COMPILER_ID}")
+
+set(CURRENT_SIMULATE_ID "${CMAKE_CXX_SIMULATE_ID}")
+message("Simulate ID is: ${CURRENT_SIMULATE_ID}")
+
 if((AVX512 OR NOT NOAVX2) AND NOT CMAKE_BUILD_TYPE MATCHES Debug)
     if(CMAKE_SYSTEM_PROCESSOR STREQUAL "AMD64" OR CMAKE_SYSTEM_PROCESSOR STREQUAL "amd64" OR CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64")
-        if( ${CMAKE_CXX_COMPILER_ID} STREQUAL "IntelLLVM")
-	    if(AVX512)
-                add_compile_options("/QxCORE-AVX512" "-O3" "-mavx512f" "-mavx512bw" "-mavx512vl")
-     	    else()
-                add_compile_options("/QxCORE-AVX2" "-O3" "-mavx2")
-	    endif()
-        elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang" AND "${CURRENT_SIMULATE_ID}" STREQUAL "MSVC")
-	    if(AVX512)
-                add_compile_options("/Ot" "/Oi" "/fp:fast" "/Gv" "/arch:AVX512")
-     	    else()
-                add_compile_options("/Ot" "/Oi" "/fp:fast" "/Gv" "/arch:AVX2")
-	    endif()
-        elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
-	    if(AVX512)
-                add_compile_options("/Ot" "/GL" "/Oi" "/fp:fast" "/Gv" "/arch:AVX512")
-     	    else()
-                add_compile_options("/Ot" "/GL" "/Oi" "/fp:fast" "/Gv" "/arch:AVX2")
-	    endif()
-        elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang" AND NOT "${CURRENT_SIMULATE_ID}" STREQUAL "MSVC")
-       if(AVX512)
-                add_compile_options("-march=x86-64-v4" "-mavx512f" "-mavx512bw" "-mavx512vl" "-mpopcnt" "-mbmi" "-mbmi2" "-mlzcnt" "-mmovbe" "-O3" "-ffast-math")
-     	    else()
-                add_compile_options("-march=x86-64-v3" "-mavx2" "-mpopcnt" "-mbmi" "-mbmi2" "-mlzcnt" "-mmovbe" "-O3" "-ffast-math")
-	    endif()
-
+        if( ${CURRENT_COMPILER_ID} STREQUAL "IntelLLVM")
+            message("Intel oneAPI")
+            if(AVX512)
+                    add_compile_options("/QxCORE-AVX512" "-O3" "-mavx512f" "-mavx512bw" "-mavx512vl")
+                else()
+                    add_compile_options("/QxCORE-AVX2" "-O3" "-mavx2")
+            endif()
+        elseif ("${CURRENT_COMPILER_ID}" STREQUAL "Clang")
+            if("${CURRENT_SIMULATE_ID}" STREQUAL "MSVC")
+                message("MSVC clang-cl")
+                if(AVX512)
+                        add_compile_options("/Ot" "/Oi" "/fp:fast" "/Gv" "/arch:AVX512")
+                    else()
+                        add_compile_options("/Ot" "/Oi" "/fp:fast" "/Gv" "/arch:AVX2")
+                endif()
+            else()        
+                message("MinGW clang")
+                if(AVX512)
+                        add_compile_options("-march=x86-64-v4" "-mavx512f" "-mavx512bw" "-mavx512vl" "-mpopcnt" "-mbmi" "-mbmi2" "-mlzcnt" "-mmovbe" "-O3" "-ffast-math")
+                    else()
+                        add_compile_options("-march=x86-64-v3" "-mavx2" "-mpopcnt" "-mbmi" "-mbmi2" "-mlzcnt" "-mmovbe" "-O3" "-ffast-math")
+                endif()
+            endif()
+        elseif ("${CURRENT_COMPILER_ID}" STREQUAL "MSVC")
+            message("MSVC")
+            if(AVX512)
+                    add_compile_options("/Ot" "/GL" "/Oi" "/fp:fast" "/Gv" "/arch:AVX512")
+                else()
+                    add_compile_options("/Ot" "/GL" "/Oi" "/fp:fast" "/Gv" "/arch:AVX2")
+            endif()
         else()
-	    if(AVX512)
-                add_compile_options("-march=x86-64-v4" "-mavx512f" "-mavx512bw" "-mavx512vl" "-mpopcnt" "-mbmi" "-mbmi2" "-mlzcnt" "-mmovbe" "-Ofast")
-     	    else()
-                add_compile_options("-march=x86-64-v3" "-mavx2" "-mpopcnt" "-mbmi" "-mbmi2" "-mlzcnt" "-mmovbe" "-Ofast")
-	    endif()
+            message("MinGW GCC")
+            if(AVX512)
+                    add_compile_options("-march=x86-64-v4" "-mavx512f" "-mavx512bw" "-mavx512vl" "-mpopcnt" "-mbmi" "-mbmi2" "-mlzcnt" "-mmovbe" "-Ofast")
+                else()
+                    add_compile_options("-march=x86-64-v3" "-mavx2" "-mpopcnt" "-mbmi" "-mbmi2" "-mlzcnt" "-mmovbe" "-Ofast")
+            endif()
         endif()
     endif()
 endif()
@@ -65,7 +77,7 @@ add_compile_definitions(
     _SCL_SECURE_NO_WARNINGS
 )
 include_directories(scintilla/include scintilla/lexlib scintilla/src scintilla/win32 src src/EditLexers)
-				 
+                 
 file(GLOB
         EditLexers
         src/EditLexers/*.cpp
